--- a/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
+++ b/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "ROLLING DOWN A CROWDED VALLEY OF OPTIMIZERS - DEVELOPMENTS FROM SGD.ipynb",
+      "name": "ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -60,10 +60,27 @@
         "- [Nadam](#Nadam)\n",
         "- [AMSGrad](#AMSGrad)\n",
         "- [AdaBelief](#AdaBelief)\n",
+        "- [Visualizing AdaBelief on Toy Problems](#AdaBelief-toy)\n",
         "\n",
         "[Which optimizer to trust?](#which-one)\n",
         "\n",
-        "[Conclusion](#conclusion)"
+        "[Conclusion](#conclusion)\n",
+        "\n",
+        "**About the topic:**\n",
+        "\n",
+        "In this blog article I have taken the survey paper published by Sebastian Ruder in 2017, _An overview of gradient descent optimization algorithms_ this paper can also be seen on his website the link to which is https://ruder.io/optimizing-gradient-descent/. Also, along with this towards the end a special focus has been on AdaBelief [paper](https://arxiv.org/abs/2010.07468) published in 2020.\n",
+        "\n",
+        "This blog is a reinterpretation of his work, some new optimization algorithms which have become quiet popular has been added in the blog to give a complete overview of optimization algorithms till date.\n",
+        "\n",
+        "Furthermore, each optimization method have been seen through their original research papers. The shortcomings of each have been mentioned which is addressed in the subsequent topics introducing new optimization techniques. \n",
+        "\n",
+        "In order to have a establish understanding of all optimizers in a connected way, and to keep away from the different notations used in the papers, all the mathematical equations have been made consistent from start to the end following the same notations for each optimization algorithms to establish a good understanding on how. \n",
+        "\n",
+        "Comparison amongst various optimizers have also been made and shown through diagrams and animations in the blog.\n",
+        "\n",
+        "This blog article has been emphasized on explaining the key concepts, shortcomings of previous approches and approaches taken to overcome the shortcomings by evaluating each papers along with the survey papers and further present the concepts in an intuitive way giving an original explanation by connecting all the work done so far.\n",
+        "\n",
+        "**Note:** - In case of issues with viewing diagrams and visualisations please refer to the same notebook on google colaboratory as the images have been embedded in the original colab notebook [colab notebook link](https://colab.research.google.com/drive/1MWWUgELkVrCuae-g3BCJTc0Qzl0dpXZY#scrollTo=kW4LXj_L1B8_)."
       ]
     },
     {
@@ -752,6 +769,28 @@
         "This is quite astonishing that such a small change in the treatment of the step-size makes such a big difference in the performance. \n",
         "\n",
         "Also, worth noticing is that AdaBelief knocks out of the park other many other optimizers in a broad variety of applications.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hLjQAj1nxnT_"
+      },
+      "source": [
+        "## _Visualizing AdaBelief on Toy Problems_\n",
+        "\n",
+        "AdaBelief is compared to SGD with Momentum and ADAM on various toy problems, a few of which is shown below.\n",
+        "Various videos on the validation on toy problems can be found in this Youtube video playlist. [AdaBelief videos](https://www.youtube.com/playlist?list=PL7KkG3n9bER6YmMLrKJ5wocjlvP7aWoOu)\n",
+        "\n",
+        "\n",
+        "\n",
+        "Beale \n",
+        "\n",
+        "![](https://drive.google.com/uc?export=view&id=16CCBBirXojblo3x03obmG72PxcLI4XeK)\n",
+        "\n",
+        "RotateQuadratic\n",
+        "\n",
+        "![](https://drive.google.com/uc?export=view&id=1FXFMOYE2aZZ_wUSG8oDOuFUksrCqHsGi)"
       ]
     },
     {
@@ -1570,7 +1609,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hsn2mU_Ut3Gp"
+        "id": "HrerkXGswd-S"
       },
       "source": [
         "## *References:*\n",
@@ -1623,7 +1662,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8I5bEgMct3Gq"
+        "id": "r-xJyOm_wd-S"
       },
       "source": [
         ""
