--- a/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
+++ b/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
@@ -38,6 +38,30 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rr2uIU1SZXiO",
+        "outputId": "a69c505f-1c9d-491e-ef95-3d82c1539651"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ihJeGj2N090O"
@@ -78,7 +102,7 @@
         "\n",
         "Comparison amongst various optimizers have also been made and shown through diagrams and animations in the blog.\n",
         "\n",
-        "This blog article has been emphasized on explaining the key concepts, shortcomings of previous approches and approaches taken to overcome the shortcomings by evaluating each papers along with the survey papers and further present the concepts in an intuitive way giving an original explanation by connecting all the work done so far.\n",
+        "This blog article has been emphasized on explaining the key concepts, shortcomings of previous approches and approaches taken to overcome the shortcomings by evaluating each papers along with the survey papers and further present the concepts in an intuitive way giving an original explanation by connecting all the work done so far. For the working code implementation, code for ADAM optimizer has been provided in the end. \n",
         "\n",
         "**Note:** - In case of issues with viewing diagrams and visualisations please refer to the same notebook on google colaboratory as the images have been embedded in the original colab notebook [colab notebook link](https://colab.research.google.com/drive/1MWWUgELkVrCuae-g3BCJTc0Qzl0dpXZY#scrollTo=kW4LXj_L1B8_)."
       ]
