--- a/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
+++ b/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb
@@ -6,6 +6,7 @@
     "colab": {
       "name": "ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,30 +36,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/nisheethjaiswal/ROLLING-DOWN-A-CROWDED-VALLEY-OF-OPTIMIZERS-DEVELOPMENTS-FROM-SGD/blob/main/ROLLING_DOWN_A_CROWDED_VALLEY_OF_OPTIMIZERS_DEVELOPMENTS_FROM_SGD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rr2uIU1SZXiO",
-        "outputId": "a69c505f-1c9d-491e-ef95-3d82c1539651"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive/')"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive/\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
